--- a/index.html
+++ b/index.html
@@ -1,1 +1,103 @@
+<!DOCTYPE html>
+<html lang="id">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
+    <title>Raider Petshop: Place to Find Your Cutest Friends</title>
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light px-4 shadow-sm p-2">
+        <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1 text-success">RAIDER PETSHOP</span>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+                aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link text-success active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-success" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-success" href="store.html">Store</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-success" href="rescue.html">Save and Rescue</a>
+                    </li>
+                </ul>
+                <span class="navbar-text">“Our perfect companions never have fewer than four feet.” - Colette</span>
+            </div>
+        </div>
+    </nav>
+    <div id="carouselExampleIndicators" class="carousel slide h-100 w-100" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner h-100 w-100">
+            <div class="carousel-item h-100 w-100 active">
+                <img src="img/banner/banner-001.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item h-100 w-100">
+                <img src="img/banner/banner-002.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item h-100 w-100">
+                <img src="img/banner/banner-003.jpg" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <div class="container-fluid bg-light">
+        <div class="px-4 py-4">
+            <h3>About</h3>
+            <div class="row">
+                <div class="col-lg-8">
+                    <p>Raider Petshop merupakan sebuah toko yang mungkin lebih tepatnya adalah rumah bagi para hewan
+                        peliharaan. Di sini Anda dapat menemukan berbagai macam hewan peliharaan yang sedang menunggu
+                        untuk bertemu Anda, teman sekaligus pemilik barunya. <b>Raider Petshop - Place to Find Your
+                            Cutest
+                            Friends</b>.</p>
+                    <p>Alamat : Jl. Mapilindo No.45 Gang Bali, Medan Perjuangan<br />
+                        Kontak : 0821-6118-8268 (Admin Angel)<br />
+                        Media Sosial :<br />
+                        - @raiderpetshop (Instagram)<br />
+                        - @raiderrescue (Instagram)<br />
+                    </p>
+                </div>
+                <div class="col-lg-4">
+                    <p><b>Find us on Google Maps</b></p>
+                    <iframe class="w-100"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d724.5315634779047!2d98.68396263463129!3d3.6123843097924033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3031318d0dcf6ad9%3A0xa993df54167bb8e9!2sJl.%20Mapilindo%20No.14%2C%20Sidorame%20Bar.%20I%2C%20Kec.%20Medan%20Perjuangan%2C%20Kota%20Medan%2C%20Sumatera%20Utara%2020236!5e0!3m2!1sid!2sid!4v1674323563129!5m2!1sid!2sid"
+                        width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script type="text/javascript" src="js/index.js"></script>
+</body>
+
+</html>
