Section testimoni, footer

--- a/index.html
+++ b/index.html
@@ -97,6 +97,138 @@
             </div>
         </div>
     </div>
+    <div class="container-fluid bg-light">
+        <div class="px-4 py-4">
+            <div class="row">
+                <div class="col-lg-6 align-self-center text-center mt-2">
+                    <h3>&nbsp;</h3>
+                    <h5 class="text-success">Raider Petshop Telah Dipercaya Lebih dari 10.000++ Pecinta Hewan</h5>
+                    <p>Pelanggan kami berasal dari kota-kota seperti Medan, Binjai, Deli Serdang dan Langkat.</p>
+                </div>
+                <div class="col-lg-6">
+                    <h3>Testimoni</h3>
+                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner text-white bg-success rounded">
+                            <div class="carousel-item active py-3">
+                                <div class="row mx-4 my-4 d-flex align-items-center">
+                                    <div class="col-lg-3">
+                                        <p class="m-0"><b>Rey</b> <br />Pemilik Burung</p>
+                                    </div>
+                                    <div class="col-lg-9">Tim SAR Raider Petshop cepat tanggap mengambil burung saya
+                                        yang lepas. Thanks Raider.</div>
+                                </div>
+                            </div>
+                            <div class="carousel-item py-3">
+                                <div class="row mx-4 my-4 d-flex align-items-center">
+                                    <div class="col-lg-3">
+                                        <p class="m-0"><b>Djeishman</b> <br />Pemilik Anjing</p>
+                                    </div>
+                                    <div class="col-lg-9">Setelah dilatih di Raider, anjing saya sudah bisa mengaum.
+                                        Terima kasih Raider.</div>
+                                </div>
+                            </div>
+                            <div class="carousel-item py-3">
+                                <div class="row mx-4 my-4 d-flex align-items-center">
+                                    <div class="col-lg-3">
+                                        <p class="m-0"><b>Melani</b> <br />Pemilik Kucing</p>
+                                    </div>
+                                    <div class="col-lg-9">Wow mantap, koleksi lengkap, timnya ramah. 100 jempol buat
+                                        Raider.</div>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid bg-white shadow-sm p-2">
+        <div class="px-4 pt-4">
+            <div class="row">
+                <div class="col-lg-8">
+                    <div class="row">
+                        <h5>Tim Kami</h5>
+                        <div class="col-lg-3 text-center">
+                            <figure class="figure">
+                                <img src="img/team/angel.jpg" class="figure-img img-fluid rounded"
+                                    alt="A generic square placeholder image with rounded corners in a figure.">
+                                <figcaption class="figure-caption">Angel @angelkornella <br />Animal lovers
+                                    especially
+                                    cats.</figcaption>
+                            </figure>
+                        </div>
+                        <div class="col-lg-3 text-center">
+                            <figure class="figure">
+                                <img src="img/team/haginta.jpg" class="figure-img img-fluid rounded"
+                                    alt="A generic square placeholder image with rounded corners in a figure.">
+                                <figcaption class="figure-caption">Haginta <br />Content creator about pets.
+                                </figcaption>
+                            </figure>
+                        </div>
+                        <div class="col-md-3 text-center">
+                            <figure class="figure">
+                                <img src="img/team/rika.jpg" class="figure-img img-fluid rounded"
+                                    alt="A generic square placeholder image with rounded corners in a figure.">
+                                <figcaption class="figure-caption">Rika @lany10_<br />Pets care, love rabbits.
+                                </figcaption>
+                            </figure>
+                        </div>
+                        <div class="col-lg-3 text-center">
+                            <figure class="figure">
+                                <img src="img/team/thendro.jpg" class="figure-img img-fluid rounded"
+                                    alt="A generic square placeholder image with rounded corners in a figure.">
+                                <figcaption class="figure-caption">Thendro @enthenxx<br />SAR Team. Dog lovers.
+                                </figcaption>
+                            </figure>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <h5>Kami Menyediakan</h5>
+                    <ul class="list-group">
+                        <li class="list-group-item"><a href="store.html"
+                                class="text-decoration-none text-body">Aksesoris Hewan</a></li>
+                        <li class="list-group-item"><a href="store.html" class="text-decoration-none text-body">Pakan
+                                dan Snack Hewan</a></li>
+                        <li class="list-group-item"><a href="#" class="text-decoration-none text-body">Klinik dan
+                                Perawatan Hewan</a></li>
+                        <li class="list-group-item"><a href="#" class="text-decoration-none text-body">Program
+                                Pelatihan
+                                Hewan</a></li>
+                        <li class="list-group-item"><a href="rescue.html" class="text-decoration-none text-body">Save
+                                and Rescue Hewan</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2">
+                    <h5>Toko Online</h5>
+                    <ul class="list-group">
+                        <li class="list-group-item"><a href="https://www.blibli.com/"
+                                class="text-decoration-none text-body">Blibli</a></li>
+                        <li class="list-group-item"><a href="https://shopee.co.id/"
+                                class="text-decoration-none text-body">Shopee</a></li>
+                        <li class="list-group-item"><a href="https://www.tokopedia.com/"
+                                class="text-decoration-none text-body">Tiktok Shop</a></li>
+                        <li class="list-group-item"><a href="https://www.tiktok.com/"
+                                class="text-decoration-none text-body">Tokopedia</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row pt-4">
+                <p style="margin-bottom: 0" class="text-center">Copyright © 2023 <b><span class="text-success">Raider
+                            Petshop</span></b></p>
+            </div>
+        </div>
+    </div>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
 
