Section hewan, aksesoris hewan dan makanan hewan

--- a/index.html
+++ b/index.html
@@ -95,6 +95,207 @@
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
+            <h3 class="pt-4">Hewan Peliharaan</h3>
+            <div class="row">
+                <div class="col-lg-4">
+                    <a href="store.html" class="text-decoration-none text-white">
+                        <div class="bg-success rounded">
+                            <div class="row">
+                                <div class="col-lg-7">
+                                    <img src="img/pet-category/cat.png" />
+                                </div>
+                                <div class="col-lg-5 pt-5 text-center">
+                                    <h5>Kucing</h5>
+                                    <p>15 Koleksi</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4">
+                    <a href="store.html" class="text-decoration-none text-white">
+                        <div class="bg-success rounded">
+                            <div class="row">
+                                <div class="col-lg-7">
+                                    <img src="img/pet-category/dog.png" />
+                                </div>
+                                <div class="col-lg-5 pt-5 text-center">
+                                    <h5>Anjing</h5>
+                                    <p>10 Koleksi</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4">
+                    <a href="store.html" class="text-decoration-none text-white">
+                        <div class="bg-success rounded">
+                            <div class="row">
+                                <div class="col-lg-7">
+                                    <img src="img/pet-category/marmut.png" />
+                                </div>
+                                <div class="col-lg-5 pt-5 text-center">
+                                    <h5>Hewan Kecil</h5>
+                                    <p>13 Koleksi</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="row pt-4">
+                <div class="col-lg-4">
+                    <a href="store.html" class="text-decoration-none text-white">
+                        <div class="bg-success rounded">
+                            <div class="row">
+                                <div class="col-lg-7">
+                                    <img src="img/pet-category/bird.png" />
+                                </div>
+                                <div class="col-lg-5 pt-5 text-center">
+                                    <h5>Burung</h5>
+                                    <p>7 Koleksi</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4">
+                    <a href="store.html" class="text-decoration-none text-white">
+                        <div class="bg-success rounded">
+                            <div class="row">
+                                <div class="col-lg-7">
+                                    <img src="img/pet-category/fish.png" />
+                                </div>
+                                <div class="col-lg-5 pt-5 text-center">
+                                    <h5>Ikan Hias</h5>
+                                    <p>8 Koleksi</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4">
+                    <a href="store.html" class="text-decoration-none text-white">
+                        <div class="bg-success rounded">
+                            <div class="row">
+                                <div class="col-lg-7">
+                                    <img src="img/pet-category/rabbit.png" />
+                                </div>
+                                <div class="col-lg-5 pt-5 text-center">
+                                    <h5>Hewan Lainnya</h5>
+                                    <p>4 Koleksi</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid bg-white">
+        <div class="px-4 py-4">
+            <h3>Aksesoris Hewan Terlaris</h3>
+            <div class="row">
+                <div class="col-lg-2">
+                    <a href="store.html"><img src="img/product/item-1001.png"
+                            class="border border-2 border-success rounded" /></a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="store.html"><img src="img/product/item-1002.png"
+                            class="border border-2 border-success rounded" /></a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="store.html"><img src="img/product/item-1003.png"
+                            class="border border-2 border-success rounded" /></a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="store.html"><img src="img/product/item-1004.png"
+                            class="border border-2 border-success rounded" /></a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="store.html"><img src="img/product/item-1005.png"
+                            class="border border-2 border-success rounded" /></a>
+                </div>
+                <div class="col-lg-2 bg-success d-flex align-items-center"
+                    style="flex-direction:column;justify-content:center">
+                    <a href="store.html" class="text-decoration-none text-white text-center">
+                        <h5>Selengkapnya</h5>
+                        <p>Raider Petshop Store</p>
+                    </a>
+                </div>
+            </div>
+            <h3 class="pt-4">Makanan Hewan Terlaris</h3>
+            <div class="row">
+                <div class="col-lg-2">
+                    <a href="store.html"><img src="img/product/item-2001.png"
+                            class="border border-2 border-success rounded" /></a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="store.html"><img src="img/product/item-2002.png"
+                            class="border border-2 border-success rounded" /></a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="store.html"><img src="img/product/item-2003.png"
+                            class="border border-2 border-success rounded" /></a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="store.html"><img src="img/product/item-2004.png"
+                            class="border border-2 border-success rounded" /></a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="store.html"><img src="img/product/item-2005.png"
+                            class="border border-2 border-success rounded" /></a>
+                </div>
+                <div class="col-lg-2 bg-success d-flex align-items-center"
+                    style="flex-direction:column;justify-content:center">
+                    <a href="store.html" class="text-decoration-none text-white text-center">
+                        <h5>Selengkapnya</h5>
+                        <p>Raider Petshop Store</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid bg-light">
+        <div class="px-4 py-4">
+            <h3>Statistik</h3>
+            <div class="row d-flex justify-content-between text-center">
+                <div class="col-lg-2">
+                    <div class="bg-success h-100 w-100 text-white rounded">
+                        <img src="img/statistic/dog-training.png" class="mw-100 p-3" />
+                        <h1>1091</h1>
+                        <p>Hewan telah bertemu teman barunya.</p>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div class="bg-success h-100 w-100 text-white rounded">
+                        <img src="img/statistic/world-animal-day.png" class="mw-100 p-3" />
+                        <h1>57</h1>
+                        <p>Hewan berada di Raider Petshop.</p>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div class="bg-success h-100 w-100 text-white rounded">
+                        <img src="img/statistic/follower.png" class="mw-100 p-3" />
+                        <h1>499RB</h1>
+                        <p>Pengikut media sosial Raider Petshop.</p>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div class="bg-success h-100 w-100 text-white rounded">
+                        <img src="img/statistic/pet-food.png" class="mw-100 p-3" />
+                        <h1>500</h1>
+                        <p>Aksesoris, pakan serta kebutuhan hewan.</p>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div class="bg-success h-100 w-100 text-white rounded">
+                        <img src="img/statistic/pet-house.png" class="mw-100 p-3" />
+                        <h1>45</h1>
+                        <p>Hewan yang diselamatkan melalui program SAR.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="container-fluid bg-light">
