Section filter dan search

--- a/store.html
+++ b/store.html
@@ -57,6 +57,41 @@
             </div>
         </div>
     </nav>
+        <div class="container-fluid bg-light">
+        <div class="px-4 py-4">
+            <h3>Store</h3>
+            <div class="row">
+                <div class="col-lg-3 d-flex justify-content-start">
+                    <div>
+                        <select class="form-select" aria-label="Default select example">
+                            <option selected>Jenis Item</option>
+                            <option value="1">Aksesoris</option>
+                            <option value="2">Pakan dan Snack</option>
+                        </select>
+                    </div>
+                    <div class="px-2"></div>
+                    <div>
+                        <select class="form-select" aria-label="Default select example">
+                            <option selected>Jenis Hewan</option>
+                            <option value="1">Anjing</option>
+                            <option value="2">Burung</option>
+                            <option value="3">Ikan Hias</option>
+                            <option value="4">Kucing</option>
+                            <option value="5">Hewan Kecil</option>
+                            <option value="6">Hewan Lainnya</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-lg-9">
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="Cari ..." aria-label="Cari ..."
+                            aria-describedby="button-addon2">
+                        <button class="btn btn-primary" type="button" id="button-addon2">Cari</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
       <script type="text/javascript" src="js/index.js"></script>
 </body>
 
