--- a/store.html
+++ b/store.html
@@ -92,6 +92,72 @@
             </div>
         </div>
     </div>
+        <div class="container-fluid bg-light">
+        <div class="px-4 pb-4">
+            <div class="row d-flex justify-content-between mb-4">
+                <div class="col-lg-2 border border-2 border-success rounded bg-white">
+                    <img src="img/product/item-1001.png" />
+                    <p><span class="fs-6">Tali Leher Kucing</span><br /><span class="text-success fs-4">Rp.
+                            45.000</span></p>
+                    <p class="fw-light ">Terjual 1981</p>
+                </div>
+                <div class="col-lg-2 border border-2 border-success rounded bg-white">
+                    <img src="img/product/item-2001.png" />
+                    <p><span class="fs-6">Pita Anjing</span><br /><span class="text-success fs-4">Rp. 36.000</span></p>
+                    <p class="fw-light ">Terjual 1901</p>
+                </div>
+                <div class="col-lg-2 border border-2 border-success rounded bg-white">
+                    <img src="img/product/item-2002.png" />
+                    <p><span class="fs-6">Pita Kucing 2 Warna</span><br /><span class="text-success fs-4">Rp.
+                            50.000</span></p>
+                    <p class="fw-light ">Terjual 1002</p>
+                </div>
+                <div class="col-lg-2 border border-2 border-success rounded bg-white">
+                    <img src="img/product/item-2003.png" />
+                    <p><span class="fs-6">Paket 3 Happy Dog</span><br /><span class="text-success fs-4">Rp.
+                            200.000</span></p>
+                    <p class="fw-light ">Terjual 269</p>
+                </div>
+                <div class="col-lg-2 border border-2 border-success rounded bg-white">
+                    <img src="img/product/item-1002.png" />
+                    <p><span class="fs-6">Kacamata Style Kucing</span><br /><span class="text-success fs-4">Rp.
+                            30.000</span></p>
+                    <p class="fw-light ">Terjual 1929</p>
+                </div>
+            </div>
+            <div class="row d-flex justify-content-between mb-4">
+                <div class="col-lg-2 border border-2 border-success rounded bg-white">
+                    <img src="img/product/item-1003.png" />
+                    <p><span class="fs-6">Anting Mainan Kucing</span><br /><span class="text-success fs-4">Rp.
+                            25.000</span></p>
+                    <p class="fw-light ">Terjual 2001</p>
+                </div>
+                <div class="col-lg-2 border border-2 border-success rounded bg-white">
+                    <img src="img/product/item-1004.png" />
+                    <p><span class="fs-6">Whiskas Tasty Mix</span><br /><span class="text-success fs-4">Rp.
+                            65.000</span></p>
+                    <p class="fw-light ">Terjual 981</p>
+                </div>
+                <div class="col-lg-2 border border-2 border-success rounded bg-white">
+                    <img src="img/product/item-1005.png" />
+                    <p><span class="fs-6">Whiskas Tuna</span><br /><span class="text-success fs-4">Rp. 75.000</span></p>
+                    <p class="fw-light ">Terjual 781</p>
+                </div>
+                <div class="col-lg-2 border border-2 border-success rounded bg-white">
+                    <img src="img/product/item-2004.png" />
+                    <p><span class="fs-6">Pedigree Chicken and Milk</span><br /><span class="text-success fs-4">Rp.
+                            125.000</span></p>
+                    <p class="fw-light ">Terjual 669</p>
+                </div>
+                <div class="col-lg-2 border border-2 border-success rounded bg-white">
+                    <img src="img/product/item-2005.png" />
+                    <p><span class="fs-6">Juara Pakan Burung</span><br /><span class="text-success fs-4">Rp.
+                            66.000</span></p>
+                    <p class="fw-light ">Terjual 876</p>
+                </div>
+            </div>
+        </div>
+    </div>
       <script type="text/javascript" src="js/index.js"></script>
 </body>
 
