--- a/store.html
+++ b/store.html
@@ -158,6 +158,83 @@
             </div>
         </div>
     </div>
+        <div class="container-fluid bg-white shadow-sm p-2">
+        <div class="px-4 pt-4">
+            <div class="row">
+                <div class="col-lg-8">
+                    <div class="row">
+                        <h5>Tim Kami</h5>
+                        <div class="col-lg-3 text-center">
+                            <figure class="figure">
+                                <img src="img/team/angel.jpg" class="figure-img img-fluid rounded"
+                                    alt="A generic square placeholder image with rounded corners in a figure.">
+                                <figcaption class="figure-caption">Angel @angelkornella <br />Animal lovers
+                                    especially
+                                    cats.</figcaption>
+                            </figure>
+                        </div>
+                        <div class="col-lg-3 text-center">
+                            <figure class="figure">
+                                <img src="img/team/haginta.jpg" class="figure-img img-fluid rounded"
+                                    alt="A generic square placeholder image with rounded corners in a figure.">
+                                <figcaption class="figure-caption">Haginta <br />Content creator about pets.
+                                </figcaption>
+                            </figure>
+                        </div>
+                        <div class="col-md-3 text-center">
+                            <figure class="figure">
+                                <img src="img/team/rika.jpg" class="figure-img img-fluid rounded"
+                                    alt="A generic square placeholder image with rounded corners in a figure.">
+                                <figcaption class="figure-caption">Rika @lany10_<br />Pets care, love rabbits.
+                                </figcaption>
+                            </figure>
+                        </div>
+                        <div class="col-lg-3 text-center">
+                            <figure class="figure">
+                                <img src="img/team/thendro.jpg" class="figure-img img-fluid rounded"
+                                    alt="A generic square placeholder image with rounded corners in a figure.">
+                                <figcaption class="figure-caption">Thendro @enthenxx<br />SAR Team. Dog lovers.
+                                </figcaption>
+                            </figure>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <h5>Kami Menyediakan</h5>
+                    <ul class="list-group">
+                        <li class="list-group-item"><a href="store.html"
+                                class="text-decoration-none text-body">Aksesoris Hewan</a></li>
+                        <li class="list-group-item"><a href="store.html" class="text-decoration-none text-body">Pakan
+                                dan Snack Hewan</a></li>
+                        <li class="list-group-item"><a href="#" class="text-decoration-none text-body">Klinik dan
+                                Perawatan Hewan</a></li>
+                        <li class="list-group-item"><a href="#" class="text-decoration-none text-body">Program
+                                Pelatihan
+                                Hewan</a></li>
+                        <li class="list-group-item"><a href="rescue.html" class="text-decoration-none text-body">Save
+                                and Rescue Hewan</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2">
+                    <h5>Toko Online</h5>
+                    <ul class="list-group">
+                        <li class="list-group-item"><a href="https://www.blibli.com/"
+                                class="text-decoration-none text-body">Blibli</a></li>
+                        <li class="list-group-item"><a href="https://shopee.co.id/"
+                                class="text-decoration-none text-body">Shopee</a></li>
+                        <li class="list-group-item"><a href="https://www.tokopedia.com/"
+                                class="text-decoration-none text-body">Tiktok Shop</a></li>
+                        <li class="list-group-item"><a href="https://www.tiktok.com/"
+                                class="text-decoration-none text-body">Tokopedia</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row pt-4">
+                <p style="margin-bottom: 0" class="text-center">Copyright © 2023 <b><span class="text-success">Raider
+                            Petshop</span></b></p>
+            </div>
+        </div>
+    </div>
       <script type="text/javascript" src="js/index.js"></script>
 </body>
 
